force-app/main/default/objects/AgentForce_Settings__mdt/AgentForce_Settings__mdt.object-meta.xml
<CustomObject>
    <label>AgentForce Settings</label>
    <pluralLabel>AgentForce Settings</pluralLabel>
</CustomObject>