force-app/main/default/objects/AgentForce_Settings__mdt/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <description>ID of the AgentForce agent</description>
    <inlineHelpText>ID of your AgentForce agent</inlineHelpText>
    <label>Agent ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>