force-app/main/default/objects/AgentForce_Settings__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>OAuth client ID from connected app</description>
    <inlineHelpText>OAuth client ID from your connected app</inlineHelpText>
    <label>Client ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>