force-app/main/default/objects/AgentForce_Settings__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <description>OAuth client secret from connected app</description>
    <inlineHelpText>OAuth client secret from your connected app</inlineHelpText>
    <label>Client Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>