force-app/main/default/objects/AgentForce_Settings__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether AgentForce integration is enabled</description>
    <inlineHelpText>Check to enable AgentForce integration</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>