force-app/main/default/objects/AgentForce_Settings__mdt/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <description>Salesforce organization ID</description>
    <inlineHelpText>Your Salesforce organization ID</inlineHelpText>
    <label>Organization ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>