force-app/main/default/objects/AgentForce_Settings__mdt/fields/Server_URL__c.field-meta.xml
<CustomField>
    <fullName>Server_URL__c</fullName>
    <defaultValue>&quot;login.salesforce.com&quot;</defaultValue>
    <description>Salesforce login URL</description>
    <inlineHelpText>Salesforce login URL (e.g., login.salesforce.com)</inlineHelpText>
    <label>Server URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>